[package]
name = "sparse-merkle-tree"
version = "0.3.1-pre"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jjyr/sparse-merkle-tree"
description = "Sparse merkle tree implement in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
blake2b-no-std = []

[dependencies]
cfg-if = "0.1"
blake2b-ref = { git = "https://github.com/jjyr/blake2b-ref.rs.git", rev = "6c88968"}

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.7"
hex = "0.4"

[[bench]]
name = "smt_benchmark"
harness = false
